--- a/config.example.json
+++ b/config.example.json
@@ -7,6 +7,7 @@
         "rabbitmq": "amqp://localhost",
         "queue": "webhook-proxy"
     },
+    "authKey": "CHANGE-ME!",
     "redis": "redis://127.0.0.1/0",
     "abuseThreshold": 12
 }
